// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when user is not signed in renders correctly 1`] = `
<DocumentFragment>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary makeStyles-root-1 MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h6
        class="MuiTypography-root makeStyles-title-3 MuiTypography-h6"
      >
        <a
          href="/"
        >
          My App
        </a>
      </h6>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <a
            href="/login"
          >
            Sign In
          </a>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      |
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <a
            href="/registration"
          >
            Sign Up
          </a>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </header>
</DocumentFragment>
`;

exports[`when user signed in renders correctly 1`] = `
<DocumentFragment>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary makeStyles-root-7 MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h6
        class="MuiTypography-root makeStyles-title-9 MuiTypography-h6"
      >
        <a
          href="/"
        >
          My App
        </a>
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1"
      >
        <a
          href="/profile"
        >
          John Doe
        </a>
      </p>
      |
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
        data-testid="logout-button"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Logout
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </header>
</DocumentFragment>
`;
